--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Cositas que hagp</h2>
+        <h2>Cositas que hago</h2>
       </div>
 
       <div class="row">
