--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1><a href="spacethings.html">SPACE THINGS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Divulgación para <span>astroarqueocuriosos</span> sencilla y para toda la familia</h2>
+      <h2>¡Hola! Soy Marina y hago divulgación para <span>astro-arqueo-curiosos</span> sencilla y para toda la familia</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
